applications/base/n8n/n8n-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: n8n
  namespace: n8n
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: n8n
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: istio-system
      ports:
        - port: 5678
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
    - to:
        - ipBlock:
            cidr: 192.168.4.124/32
      ports:
        - port: 5432
          protocol: TCP
        - port: 2049
          protocol: TCP
    - to:
        - ipBlock:
            cidr: 192.168.0.0/16
      ports:
        - port: 1234
          protocol: TCP
    - ports:
        - port: 80
          protocol: TCP
    - ports:
        - port: 443
          protocol: TCP
